photo upload, passing file with the form data

--- a/todo
+++ b/todo
@@ -37,6 +37,8 @@ some data in footer (contact info, insta, etc...)
 
 :id -> handle if passed improper id (404)
 
+create services for components
+
 
 
 REGISTRATION + LOGIN forms
